stylesheet/base-rf.css
/* *** general *** */

html, body {
	font-size: 100%;
	border: 0;
	height: 100%;
	padding: 0;
	margin: 0;
	width: 100%;
	background: #ECF0F1;
}

.left {
	text-align: left;
}

.right {
	text-align: right;
}

a {
	text-decoration: none;
	color: #3498db;
}

img {
	border: 0;
}

.index {
	/* style consistent across all index-classed elements */
}

/*
	HEADER SECTION

	header
	>	headerLogo
	>	headerDiv
		>	headerDivImg
			>	ipadImg
		>	headerDivBody
			>	headerTagline
			>	centerInset
				>	inputMain
				>	a > actionButton
				>	insetTagline
				>	buttonImg
*/

header {
	background: #ECF0F1;
	padding: 0;
	position: relative;
}

header.index {
	height: 100%;
	margin-bottom: -35px;
}

.headerLogo {
	padding: 70px 0 0 0;
	margin: 0 auto;
	height: 130px;
	text-align: center;
	position: relative;
}

.logo {
	position: relative;
    font-size: 70px;
    color: #C0392B;
    font-family: 'NexaHeavy';
    font-weight: normal;
    line-height: 70px;
}

/* The following lines create inset effect */
.logo:before, .logo:after {
	position: absolute;
	color: rgba(255,255,255,.1);
	content: 'HairStory';
}	
.logo:before { top: 3px; left: 3px; }
.logo:after { top: 5px; left: 5px; }

#headerDiv {
	position: relative;
	height: calc(100% - 235px);
	min-height: 665px;
	width: 1300px;
	top: 5%;
	margin: 0 auto;
}

#headerDivImg {
	position: absolute;
	top: 0;
	bottom: 0;
	left: 0;
	right: 55%;
	margin: auto;
}

#img1 {
	width: 100%;
	margin: 0 auto;
}

#headerDivBody {
	position: absolute;
	top: 0;
	bottom: 0;
	left: 55%;
	right: 0;
	text-align: right;
	margin: auto;
}

#headerTagline {
	color: #34495e;
    font-family: 'Roboto';
    font-size: 2.1em;
    letter-spacing: 0.05em;
}

#centerInset {
	position: relative;
	padding-top: 6%;
	padding-bottom: 6%;
	text-align: center;
	left: 3em;
	right: 0;
}

#inputMain {
	padding: .25em;
	margin: 0 auto;
    background: #FFFFFF;
    border: 1px solid #828282;
    border-radius: 6px;

    font-size: 1.3em;
    font-family: 'Roboto';
    font-weight: 100;
    height: 1.8em;
    min-width: 13em;
    width: 75%;
    text-align: center; 
}

#inputMain:active, #inputMain:focus, #inputMain:hover {
    background: #FFFFFF;
    box-shadow: inset 0 0 3px #029C40;
}

#actionButton {
    padding: .25em;
    margin: 0 auto;
    background: none repeat scroll 0 0 #C0392B;
    border: 1px solid #C0392B;
    border-radius: 6px;

    font-size: 1.3em;
    font-family: 'Roboto';
    height: 1.8em;
    line-height: 1.8em;
    min-width: 13em;
    width: 75%;
    text-align: center;

    color: #ECF0F1;
    margin-top: .5em;
    margin-bottom: 1.75em;
}

#actionButton:active, #actionButton:focus, #actionButton:hover {
    background: none repeat scroll 0 0 #E74C3C;
    text-decoration: none;
}

#insetTagline {
	color: #000;
	font-size: 1.3em;
    font-family: 'Roboto';
    font-weight: 100;
}

#buttonImgWrapper {
	margin-top: 0.9em;
}

.buttonImg {
    height: 3em;
    margin: 0 1.3em;
}

/*
	CONTENT SECTION

	content
	>	contentDiv
		>	contentDivImg
			>	img
		>	contentDivBody
			>	contentDivBodyTitle
			>	contentDivBodyText

*/

#content {
	position: relative;
	margin: 0;
	padding: 0;
	width: 100%;
}

.contentDiv {
	height: 450px;
	width: 100%;
	margin: 0;
	padding: 0 0;
	position: relative;
}

#div1 {
	background: #34495e;
}
#div2 {
	background: #E67E22;
}
#div3 {
	background: #3498db;
}
#div4 {
	background: #363534;
}

.contentDivImg {
	position: absolute;
	top: 50%;
	bottom: 0;
	text-align: center;
	margin: -187px auto 0;
}

.contentDivBody {
	position: absolute;
	top: 0;
	bottom: 0;

	height: 50%;
	width: 35%;

	margin: auto;
}

/* set floats and margin-left or -right to flip */
#div1 .contentDivImg { float: right; left: 40%; right: 0; }
#div1 .contentDivBody { float: left; right: 50%; }
#div2 .contentDivImg { float: left; left: 0; right: 40%; }
#div2 .contentDivBody { float: right; left: 50%; }
#div3 .contentDivImg { float: right; left: 40%; right: 0; }
#div3 .contentDivBody { float: left; right: 50%; }
#div4 .contentDivImg { float: left; left: 0; right: 40%; }
#div4 .contentDivBody { float: right; left: 50%; }

.contentDivBodyTitle {
	color: #ECF0F1;
	font-family: 'Roboto';
	font-size: 32px;
	font-weight: normal;
	margin-top: 30px;
	text-align: left;
}

.contentDivBodyText {
	color: #ECF0F1;
	font-family: 'Roboto';
	font-size: 22px;
	font-weight: 300;
	text-align: left;
}

.contentDivBodyText b {
	font-family: 'Roboto';
	font-weight: 500;
}

.imgContent {
	height: 375px;
	margin: 0 auto;
}

.inputMini {
	padding: .25em;
	margin: 2em 1% 0 0;
	background: #FFFFFF;
	border: 1px solid #828282;
	border-radius: 6px;
	width: 60%;
	height: 1.5em;
	text-align: left;

	font-size: 1.2em;
	font-family: 'Roboto';
	font-weight: 100;
}

.inputMini:active, .inputMini:focus, .inputMini:hover {
    background: #FFFFFF;
    box-shadow: inset 0 0 3px #029C40;
}

.actionButtonMini {
	padding: .35em;
	margin: 2em 0 0 1%;
	background: none repeat scroll 0 0 #C0392B;
	border-radius: 6px;
	
	font-size: 1.2em;
	font-family: 'Roboto';
	color: #ECF0F1;

	line-height: 1.2em;
	text-align: center;
}

.actionButtonMini:before, .actionButtonMini:after {
	color: rgba(0,0,0,0);
	content: "___";
}

.actionButtonMini:active, .actionButtonMini:focus, .actionButtonMini:hover {
    background: none repeat scroll 0 0 #E74C3C;
    text-decoration: none;
}

/*
	FOOTER SECTION

	footer
	>	nav
		>	footerLinks
			>	footerLink
		>	footerShare
			> AddToAny
*/

footer {
	position: relative;
	height: 100px;
	min-width: ;
	width: 75%;
	margin: 0 auto;
	white-space: nowrap;
}

.footerLinks {
	margin: 0 auto;
	position: relative;
	float: left;
	width: 50%;
	height: 100px;
	text-align: left;
	vertical-align: middle;
}

.footerLink {
	margin: 0 auto;
    padding-right: 50px;
    padding-left: 0;
	color: #363534;
    font-family: 'Roboto';
    font-size: 20px;
    line-height: 100px;
    text-decoration: none;
    font-weight: normal;
}

.footerLink:hover, .footerLink:focus, .footerLink:active {
	color: #C0392B;
	text-decoration: none;
	font-weight: normal;
}

.footerShare {
	margin: 0;
	padding: 30px 0;
	position: relative;
	float: right;
	text-align: right;
	width: 50%;
}

.footerShareButton {
	margin: 0;
	padding: 0;
	display: inline-block;
	vertical-align: middle;
	width: 38px;
	height: 40px;
}

